--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ nornir = "^3.3.0"
 click = "^8.1.3"
 PyYAML = "^6.0"
 rich = "^12.5.1"
-nornir-utils = "^0.2.0"
 nornir-napalm = "^0.3.0"
 nornir-jinja2 = "^0.2.0"
+nornir-rich = "^0.1.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
