Add configure-interfaces and configure-peering

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ nornir-napalm = "^0.3.0"
 nornir-jinja2 = "^0.2.0"
 nornir-rich = "^0.1.4"
 docker = "^5.0.3"
+openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
