--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,26 @@
 [tool.poetry]
 name = "arista-lab"
 version = "0.1.0"
-description = ""
+description = "Simple tooling when working with EOS in labs"
 authors = ["Matthieu Tache <mtache@arista.com>"]
 
 [tool.poetry.scripts]
-lab = 'arista_lab.cli:cli'
+lab = 'arista_lab.cli:main'
 
 [tool.poetry.dependencies]
-python = "^3.8"
-nornir = "^3.3.0"
-click = "^8.1.3"
-PyYAML = "^6.0"
-rich = "^12.0.1"
-nornir-napalm = "^0.3.0"
-nornir-jinja2 = "^0.2.0"
-nornir-rich = "^0.1.4"
-docker = "^5.0.3"
+python = "~3.10"
+nornir = "^3.4"
+click = "^8.1"
+PyYAML = "^6"
+rich = "^13"
+nornir-napalm = "^0.4"
+nornir-jinja2 = "^0.2"
+docker = "^7"
 openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+ruff = "^0.2"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
