--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,13 @@ rich = "^13"
 nornir-napalm = "^0.4"
 nornir-jinja2 = "^0.2"
 docker = "^7"
+requests = "^2.31"
 openpyxl = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
+mypy = "^1.8"
+types-PyYAML = "^6"
+types-requests = "^2.31"
 ruff = "^0.2"
 
 [build-system]
